--- a/arch/arm/boot/dts/1appended.dts
+++ b/arch/arm/boot/dts/1appended.dts
@@ -6,13 +6,20 @@
 	interrupt-parent = <0x01>;
 	#address-cells = <0x02>;
 	#size-cells = <0x02>;
+/*
+	aliases {
+	display0 = &framebuffer0;
+	};
+*/
 
 	chosen {
 		bootargs = "console=tty0 console=ttyMT0,921600n1 initrd=0x44000000,\
-0x1000000 loglevel=8 clk_ignore_unused pd_ignore_unused";
+	0x1000000 loglevel=8 clk_ignore_unused pd_ignore_unused earlyprintk";
 		linux,phandle = <0x38>;
 		phandle = <0x38>;
 	};
+
+
 
 	pmu {
 		compatible = "arm,cortex-a7-pmu";
@@ -219,6 +226,7 @@
 		linux,phandle = <0x3a>;
 		phandle = <0x3a>;
 
+
 		pstore-reserved-memory@44410000 {
 			compatible = "mediatek,pstore";
 			reg = <0x00 0x44410000 0x00 0xe0000>;
@@ -243,6 +251,7 @@
 			alignment = <0x00 0x200000>;
 			alloc-ranges = <0x00 0x40000000 0x00 0x38000000>;
 		};
+
 	};
 
 	interrupt-controller@0c000000 {
