--- a/arch/arm/configs/yay_defconfig
+++ b/arch/arm/configs/yay_defconfig
@@ -111,7 +111,7 @@ CONFIG_RCU_STALL_COMMON=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_LOG_BUF_SHIFT=17
+CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
@@ -251,7 +251,7 @@ CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-# CONFIG_MODVERSIONS is not set
+CONFIG_MODVERSIONS=n
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
@@ -267,7 +267,7 @@ CONFIG_LBDAF=y
 #
 # Partition Types
 #
-# CONFIG_PARTITION_ADVANCED is not set
+# CONFIG_PARTITION_ADVANCED=n
 CONFIG_MSDOS_PARTITION=y
 CONFIG_EFI_PARTITION=y
 
@@ -484,7 +484,7 @@ CONFIG_HIGHMEM=y
 CONFIG_CPU_SW_DOMAIN_PAN=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
-CONFIG_ARM_MODULE_PLTS=y
+CONFIG_ARM_MODULE_PLTS=n
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
@@ -535,8 +535,8 @@ CONFIG_BUILD_ARM_DTB_OVERLAY_IMAGE_NAMES="fd3901"
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="console=tty0 fbcon=map:1 console=ttyMT3,921600n1 vmalloc=128M slub_max_order=0 slub_debug=O nowatchdog earlyprintk "
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 fbcon=map:0 vmalloc=128M slub_max_order=0 slub_debug=O keep_bootcon earlyprintk"
+CONFIG_CMDLINE_FROM_BOOTLOADER=n
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_KEXEC is not set
@@ -1318,7 +1318,7 @@ CONFIG_MTK_CAM_CAL=y
 CONFIG_MTK_CMDQ=y
 # CONFIG_MTK_CMDQ_TAB is not set
 CONFIG_MTK_CQDMA=y
-# CONFIG_SINGLE_PANEL_OUTPUT is not set
+CONFIG_SINGLE_PANEL_OUTPUT=n
 CONFIG_MTK_DUAL_DISPLAY_SUPPORT=0
 CONFIG_MTK_FLASHLIGHT=y
 # CONFIG_MTK_FLASHLIGHT_LED191 is not set
@@ -1348,7 +1348,7 @@ CONFIG_MTK_IMGSENSOR=y
 # CONFIG_SPECIFY_IMGSENSOR is not set
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_LCM=y
-CONFIG_CUSTOM_KERNEL_LCM="nt35521_hd_dsi_vdo_truly_nt50358"
+CONFIG_CUSTOM_KERNEL_LCM="r61350_cpt55_xinli_lhd"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_USE_MODULE is not set
@@ -1392,7 +1392,7 @@ CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 # CONFIG_MTK_ROUND_CORNER_SUPPORT is not set
-CONFIG_LCM_HEIGHT="1280"
+CONFIG_LCM_HEIGHT="1440"
 CONFIG_LCM_WIDTH="720"
 CONFIG_CUSTOM_LCM_X="0"
 CONFIG_CUSTOM_LCM_Y="0"
@@ -1657,10 +1657,10 @@ CONFIG_MTK_VIBRATOR=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_FPSGO=y
-CONFIG_MTK_FPSGO_FBT_GAME=y
-CONFIG_MTK_FPSGO_FBT_UX=y
-CONFIG_MTK_FPSGO_FSTB=y
+CONFIG_MTK_FPSGO=n
+CONFIG_MTK_FPSGO_FBT_GAME=n
+CONFIG_MTK_FPSGO_FBT_UX=n
+CONFIG_MTK_FPSGO_FSTB=n
 # CONFIG_MTK_FPSGO_MULTI_STAGE_RESCUE is not set
 
 #
@@ -1763,7 +1763,7 @@ CONFIG_SCHED_HMP=y
 CONFIG_SCHED_HMP_PRIO_FILTER=y
 CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
-CONFIG_HMP_TRACER=y
+# CONFIG_HMP_TRACER is not set
 CONFIG_SCHED_HMP_PLUS=y
 # CONFIG_MTK_SELINUX_AEE_WARNING is not set
 # CONFIG_MTK_ROOT_TRACE is not set
@@ -1927,7 +1927,7 @@ CONFIG_WLAN=y
 #
 CONFIG_INPUT=y
 CONFIG_INPUT_LEDS=y
-# CONFIG_INPUT_FF_MEMLESS is not set
+CONFIG_INPUT_FF_MEMLESS=y
 # CONFIG_INPUT_POLLDEV is not set
 # CONFIG_INPUT_SPARSEKMAP is not set
 # CONFIG_INPUT_MATRIXKMAP is not set
@@ -2013,7 +2013,7 @@ CONFIG_GTP_CREATE_WR_NODE=y
 # CONFIG_GTP_DEBUG_ARRAY_ON is not set
 # CONFIG_GTP_DEBUG_FUNC_ON is not set
 CONFIG_GTP_POWER_CTRL_SLEEP=y
-# CONFIG_GTP_ICS_SLOT_REPORT is not set
+CONFIG_GTP_ICS_SLOT_REPORT=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_MTK_GT5688 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT911 is not set
@@ -2648,7 +2648,7 @@ CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
 CONFIG_LOGO_LINUX_CLUT224=y
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
+CONFIG_FRAMEBUFFER_CONSOLE=y
 
 #
 # Frame buffer hardware drivers
@@ -2663,9 +2663,9 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_FB_AUO_K190X is not set
-# CONFIG_FB_SIMPLE is not set
+# CONFIG_FB_SIMPLE=y
 # CONFIG_FB_SSD1307 is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+# CONFIG_BACKLIGHT_LCD_SUPPORT=n
 # CONFIG_ADF is not set
 # CONFIG_VGASTATE is not set
 CONFIG_HDMI=y
@@ -2682,7 +2682,7 @@ CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_OSSEMUL=y
 # CONFIG_SND_MIXER_OSS is not set
-# CONFIG_SND_PCM_OSS is not set
+CONFIG_SND_PCM_OSS=y
 CONFIG_SND_PCM_TIMER=y
 CONFIG_SND_SEQUENCER_OSS=y
 CONFIG_SND_HRTIMER=y
@@ -2692,8 +2692,8 @@ CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
-# CONFIG_SND_VERBOSE_PRINTK is not set
-# CONFIG_SND_DEBUG is not set
+CONFIG_SND_VERBOSE_PRINTK=y
+CONFIG_SND_DEBUG=y
 CONFIG_SND_RAWMIDI_SEQ=y
 # CONFIG_SND_OPL3_LIB_SEQ is not set
 # CONFIG_SND_OPL4_LIB_SEQ is not set
@@ -3171,7 +3171,7 @@ CONFIG_USB_CONFIGFS_F_HID=y
 # CONFIG_USB_G_ANDROID is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
-# CONFIG_USB_ETH is not set
+# CONFIG_USB_ETH=n
 # CONFIG_USB_G_NCM is not set
 # CONFIG_USB_GADGETFS is not set 
 # CONFIG_USB_FUNCTIONFS is not set
@@ -3797,8 +3797,8 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=y
 #
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
-CONFIG_PANIC_ON_OOPS=y
-CONFIG_PANIC_ON_OOPS_VALUE=1
+CONFIG_PANIC_ON_OOPS=n
+# CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
@@ -3843,7 +3843,7 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_EQS_DEBUG is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
-CONFIG_FAULT_INJECTION=y
+# CONFIG_FAULT_INJECTION=n
 # CONFIG_FAILSLAB is not set
 # CONFIG_FAIL_PAGE_ALLOC is not set
 # CONFIG_FAIL_MAKE_REQUEST is not set
@@ -3959,9 +3959,9 @@ CONFIG_HARDENED_USERCOPY=y
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_INTEGRITY=y
+#CONFIG_INTEGRITY=n
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+#CONFIG_INTEGRITY_AUDIT=n
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 
@@ -3969,9 +3969,9 @@ CONFIG_INTEGRITY_AUDIT=y
 # Storage Hardware Inline Encryption
 #
 # CONFIG_HIE is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_SELINUX=n
 # CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+# CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
 
 #
@@ -4198,3 +4198,4 @@ CONFIG_FONT_AUTOSELECT=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
 # CONFIG_VIRTUALIZATION is not set
+
