--- a/arch/arm/configs/yay_defconfig
+++ b/arch/arm/configs/yay_defconfig
@@ -536,8 +536,8 @@ CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 fbcon=map:0 vmalloc=128M slub_max_order=0 slub_debug=O keep_bootcon earlyprintk"
-CONFIG_CMDLINE_FROM_BOOTLOADER=n
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
@@ -1540,7 +1540,7 @@ CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_WIFI_MCC_SUPPORT=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_CONN_LTE_IDC_SUPPORT=y
-# CONFIG_GPS is not set
+CONFIG_GPS=y
 CONFIG_MTK_GPS=y
 CONFIG_MTK_GPS_SUPPORT=y
 # CONFIG_MTK_GPS_REGISTER_SETTING is not set
@@ -1954,7 +1954,7 @@ CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
 # CONFIG_TWOKEY_REBOOT_OTHER_MODE is not set
 CONFIG_KPD_PMIC_LPRST_TD=0
 # CONFIG_KPD_PWRKEY_USE_EINT is not set
-CONFIG_KPD_PWRKEY_USE_PMIC=y
+# CONFIG_KPD_PWRKEY_USE_PMIC is not set
 # CONFIG_KPD_ACCESS_PMIC_REGMAP is not set
 # CONFIG_MTK_MRDUMP_KEY is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
@@ -2016,7 +2016,7 @@ CONFIG_GTP_POWER_CTRL_SLEEP=y
 CONFIG_GTP_ICS_SLOT_REPORT=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_MTK_GT5688 is not set
-# CONFIG_TOUCHSCREEN_MTK_GT911 is not set
+CONFIG_TOUCHSCREEN_MTK_GT911=y
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_LM is not set
 # CONFIG_TOUCHSCREEN_FT5X26 is not set
 # CONFIG_TOUCHSCREEN_MTK_GSLX680 is not set
@@ -2039,7 +2039,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_EGALAX is not set
 # CONFIG_TOUCHSCREEN_FT6236 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
-# CONFIG_TOUCHSCREEN_GOODIX is not set
+CONFIG_TOUCHSCREEN_GOODIX=y
 # CONFIG_TOUCHSCREEN_ILI210X is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELAN is not set
@@ -2189,7 +2189,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_CBUS_GPIO is not set
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_EMEV2 is not set
-# CONFIG_I2C_GPIO is not set
+CONFIG_I2C_GPIO=y
 CONFIG_I2C_MTK=y
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
