--- a/arch/arm/configs/yay_defconfig
+++ b/arch/arm/configs/yay_defconfig
@@ -535,10 +535,10 @@ CONFIG_BUILD_ARM_DTB_OVERLAY_IMAGE_NAMES="fd3901"
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 fbcon=map:0 vmalloc=128M slub_max_order=0 slub_debug=O keep_bootcon earlyprintk"
-CONFIG_CMDLINE_FROM_BOOTLOADER=n
-# CONFIG_CMDLINE_EXTEND is not set
-# CONFIG_CMDLINE_FORCE is not set
+CONFIG_CMDLINE="keep_bootcon earlyprintk ignore_loglevel"
+#CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE_EXTEND=y
+#CONFIG_CMDLINE_FORCE is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
 CONFIG_AUTO_ZRELADDR=y
@@ -1145,7 +1145,7 @@ CONFIG_OF_ADDRESS=y
 CONFIG_OF_IRQ=y
 CONFIG_OF_NET=y
 CONFIG_OF_RESERVED_MEM=y
-# CONFIG_OF_OVERLAY is not set
+CONFIG_OF_OVERLAY=y
 CONFIG_ARCH_MIGHT_HAVE_PC_PARPORT=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
@@ -1540,7 +1540,7 @@ CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_WIFI_MCC_SUPPORT=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_CONN_LTE_IDC_SUPPORT=y
-# CONFIG_GPS is not set
+CONFIG_GPS=y
 CONFIG_MTK_GPS=y
 CONFIG_MTK_GPS_SUPPORT=y
 # CONFIG_MTK_GPS_REGISTER_SETTING is not set
@@ -2009,14 +2009,14 @@ CONFIG_GTP_HEADER_FW_UPDATE=y
 # CONFIG_GTP_REQUEST_FW_UPDATE is not set
 CONFIG_GTP_CREATE_WR_NODE=y
 # CONFIG_GTP_ESD_PROTECT is not set
-# CONFIG_GTP_CHARGER_SWITCH is not set
-# CONFIG_GTP_DEBUG_ARRAY_ON is not set
-# CONFIG_GTP_DEBUG_FUNC_ON is not set
-CONFIG_GTP_POWER_CTRL_SLEEP=y
+# CONFIG_GTP_CHARGER_SWITCH=n
+#CONFIG_GTP_DEBUG_ARRAY_ON=y
+#CONFIG_GTP_DEBUG_FUNC_ON=y
+#CONFIG_GTP_POWER_CTRL_SLEEP=n
 CONFIG_GTP_ICS_SLOT_REPORT=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_MTK_GT5688 is not set
-# CONFIG_TOUCHSCREEN_MTK_GT911 is not set
+# CONFIG_TOUCHSCREEN_MTK_GT911=y
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_LM is not set
 # CONFIG_TOUCHSCREEN_FT5X26 is not set
 # CONFIG_TOUCHSCREEN_MTK_GSLX680 is not set
@@ -2039,7 +2039,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_EGALAX is not set
 # CONFIG_TOUCHSCREEN_FT6236 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
-# CONFIG_TOUCHSCREEN_GOODIX is not set
+# CONFIG_TOUCHSCREEN_GOODIX=y
 # CONFIG_TOUCHSCREEN_ILI210X is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELAN is not set
@@ -2089,7 +2089,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_CM109 is not set
 # CONFIG_INPUT_REGULATOR_HAPTIC is not set
 CONFIG_INPUT_UINPUT=y
-# CONFIG_INPUT_GPIO is not set
+CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_PCF8574 is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_ADXL34X is not set
@@ -2098,6 +2098,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+CONFIG_TOUCHSCREEN_MTK_FOCALTECH_TS=y
 
 #
 # Fingerprint support
@@ -2124,8 +2125,8 @@ CONFIG_LEGACY_PTY_COUNT=16
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-# CONFIG_DEVMEM is not set
-# CONFIG_DEVKMEM is not set
+CONFIG_DEVMEM=y
+CONFIG_DEVKMEM=y
 CONFIG_USER_NS=y
 #
 # Serial drivers
@@ -2174,8 +2175,8 @@ CONFIG_RPMB=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-# CONFIG_I2C_CHARDEV is not set
-# CONFIG_I2C_MUX is not set
+CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=y
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_I2C_ALGOBIT=y
 
@@ -2189,8 +2190,11 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_CBUS_GPIO is not set
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_EMEV2 is not set
-# CONFIG_I2C_GPIO is not set
+CONFIG_I2C_GPIO=y
 CONFIG_I2C_MTK=y
+#CONFIG_MTK_I2C_EXTENSION=n
+#CONFIG_MTK_I2C_ARBITRATION=n
+
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
@@ -2212,10 +2216,10 @@ CONFIG_I2C_MTK=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
-# CONFIG_I2C_SLAVE is not set
-# CONFIG_I2C_DEBUG_CORE is not set
-# CONFIG_I2C_DEBUG_ALGO is not set
-# CONFIG_I2C_DEBUG_BUS is not set
+CONFIG_I2C_SLAVE=y
+# CONFIG_I2C_DEBUG_CORE
+# CONFIG_I2C_DEBUG_ALGO=y
+# CONFIG_I2C_DEBUG_BUS=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -2648,7 +2652,7 @@ CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
 CONFIG_LOGO_LINUX_CLUT224=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
+#CONFIG_FRAMEBUFFER_CONSOLE is not set
 
 #
 # Frame buffer hardware drivers
@@ -2665,7 +2669,7 @@ CONFIG_FRAMEBUFFER_CONSOLE=y
 # CONFIG_FB_AUO_K190X is not set
 # CONFIG_FB_SIMPLE=y
 # CONFIG_FB_SSD1307 is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT=n
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_ADF is not set
 # CONFIG_VGASTATE is not set
 CONFIG_HDMI=y
@@ -2682,7 +2686,7 @@ CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_OSSEMUL=y
 # CONFIG_SND_MIXER_OSS is not set
-CONFIG_SND_PCM_OSS=y
+#CONFIG_SND_PCM_OSS is not set
 CONFIG_SND_PCM_TIMER=y
 CONFIG_SND_SEQUENCER_OSS=y
 CONFIG_SND_HRTIMER=y
@@ -2693,7 +2697,7 @@ CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
 CONFIG_SND_VERBOSE_PRINTK=y
-CONFIG_SND_DEBUG=y
+# CONFIG_SND_DEBUG is not set
 CONFIG_SND_RAWMIDI_SEQ=y
 # CONFIG_SND_OPL3_LIB_SEQ is not set
 # CONFIG_SND_OPL4_LIB_SEQ is not set
@@ -2935,7 +2939,7 @@ CONFIG_USB_HID=y
 #
 # I2C HID support
 #
-# CONFIG_I2C_HID is not set
+CONFIG_I2C_HID=y
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
