--- a/arch/arm/configs/yay_defconfig
+++ b/arch/arm/configs/yay_defconfig
@@ -1366,7 +1366,7 @@ CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_DW9800WAF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9718SAF_SUPPORT is not set
-# CONFIG_MTK_LENS_DW9714AF_SUPPORT is not set
+CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
 # CONFIG_MTK_LENS_DW9763AF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9714A_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9814AF_SUPPORT is not set
@@ -1415,7 +1415,7 @@ CONFIG_MTK_SENSORS_1_0=y
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 # CONFIG_MTK_ACCELHUB is not set
 # CONFIG_MTK_BMI160_SPI is not set
-# CONFIG_MTK_BMI160_I2C is not set
+CONFIG_MTK_BMI160_I2C=y
 # CONFIG_MTK_ICM206XX_A is not set
 # CONFIG_MTK_BMA2XX is not set
 # CONFIG_MTK_MC3433 is not set
@@ -1438,7 +1438,7 @@ CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 # CONFIG_MTK_GYROHUB is not set
 # CONFIG_MTK_LSM6DS3HGY is not set
 # CONFIG_MTK_BMI160GY_SPI is not set
-# CONFIG_MTK_BMI160GY_I2C is not set
+CONFIG_MTK_BMI160GY_I2C=y
 # CONFIG_MTK_ICM206XX_G is not set
 CONFIG_MTK_ITG1010=y
 # CONFIG_MTK_MPU6050GY is not set
@@ -1602,7 +1602,7 @@ CONFIG_MTK_GPIOLIB_STAND=y
 # CONFIG_MTK_IR_LEARNING_SUPPORT is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_LEDS=y
-CONFIG_LIGHTNESS_MAPPING_VALUE=255
+CONFIG_LIGHTNESS_MAPPING_VALUE=100
 # CONFIG_BACKLIGHT_SUPPORT_LP8557 is not set
 # CONFIG_BACKLIGHT_SUPPORT_LM3697 is not set
 # CONFIG_LED_BREATHLIGHT_AW2013 is not set
@@ -2374,7 +2374,7 @@ CONFIG_MTK_SWCHR_SUPPORT=y
 # CONFIG_MTK_BQ24160_SUPPORT is not set
 # CONFIG_MTK_BQ24196_SUPPORT is not set
 # CONFIG_MTK_BQ24296_SUPPORT is not set
-# CONFIG_MTK_BQ24158_SUPPORT is not set
+#CONFIG_MTK_BQ24158_SUPPORT is not set
 CONFIG_MTK_BQ2560X_SUPPORT=y
 # CONFIG_MTK_NCP1854_SUPPORT is not set
 # CONFIG_MTK_BQ24297_SUPPORT is not set
@@ -2603,7 +2603,7 @@ CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
-
+CONFIG_DRM_MEDIATEK=y
 #
 # I2C encoder or helper chips
 #
@@ -2674,8 +2674,8 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_VGASTATE is not set
 CONFIG_HDMI=y
 CONFIG_SOUND=y
-CONFIG_SOUND_OSS_CORE=y
-CONFIG_SOUND_OSS_CORE_PRECLAIM=y
+# CONFIG_SOUND_OSS_CORE=y
+# CONFIG_SOUND_OSS_CORE_PRECLAIM=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
@@ -2686,7 +2686,7 @@ CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_OSSEMUL=y
 # CONFIG_SND_MIXER_OSS is not set
-#CONFIG_SND_PCM_OSS is not set
+##CONFIG_SND_PCM_OSS is not set
 CONFIG_SND_PCM_TIMER=y
 CONFIG_SND_SEQUENCER_OSS=y
 CONFIG_SND_HRTIMER=y
